...
                    fontFamily = FontFamily.Monospace,
                    color = Primary40
                )
                
                if (laps.isNotEmpty() || currentLapTimeMillis > 0) {
                    Text(
                        text = "Lap: ",
                        fontSize = 20.sp,
                        fontWeight = FontWeight.Medium,
                        fontFamily = FontFamily.Monospace,
                        color = Secondary40,
                        modifier = Modifier.padding(top = 8.dp)
                    )
...
